--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <!-- Data Files -->
     <script src="data1.js"></script>
+    <script src="data3.js"></script>
     <script src="data4.js"></script>
     <script src="data5.js"></script>
     
