--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <div id="root"></div>
 
     <!-- Data Files -->
+    <!--data0.js is infact data2.js this is hidden for najirmanagement sites -->
     <script src="data1.js"></script>
-    <script src="data2.js"></script>
+    <script src="data0.js"></script>
     <script src="data3.js"></script>
     <script src="data4.js"></script>
     <script src="data5.js"></script>
+    <script src="data6.js"></script>
     
     <!-- Core Scripts -->
     <script src="sql.js"></script>
